--- a/src/components/doors/doors.module.scss
+++ b/src/components/doors/doors.module.scss
@@ -10,13 +10,13 @@ h1 {
   margin-bottom: 16rem;
 
   .backDoor {
-    background-color: #F2F4EC;
+    background-color: #f2f4ec;
     position: relative;
     width: 8rem;
     height: 8rem;
-    box-shadow: 0 0 1.5rem .25rem transparent;
+    box-shadow: 0 0 1.5rem 0.25rem transparent;
     transition: all 0.5s ease-in-out;
-    border: 1px solid #FFF;
+    border: 1px solid #fff;
     border-radius: 0 0.5rem 0.5rem 0;
     cursor: pointer;
 
@@ -44,27 +44,27 @@ h1 {
       transform: rotate(150deg);
     }
 
-    &:nth-child(2n+1) .door::after {
+    &:nth-child(2n + 1) .door::after {
       transform: rotate(180deg);
     }
 
-    &:nth-child(3n+2) .door::after {
+    &:nth-child(3n + 2) .door::after {
       transform: rotate(210deg);
     }
 
-    &:nth-child(5n+3) .door::after {
+    &:nth-child(5n + 3) .door::after {
       transform: rotate(240deg);
     }
 
-    &:nth-child(11n+5) .door::after {
+    &:nth-child(11n + 5) .door::after {
       transform: rotate(270deg);
     }
 
-    &:nth-child(13n+11) .door::after {
+    &:nth-child(13n + 11) .door::after {
       transform: rotate(300deg);
     }
 
-    &:nth-child(17n+13) .door::after {
+    &:nth-child(17n + 13) .door::after {
       transform: rotate(330deg);
     }
 
@@ -77,15 +77,15 @@ h1 {
       justify-content: center;
       width: 8rem;
       height: 8rem;
-      background-color: #14555A;
+      background-color: var(--color-dnb-green);
       transform-origin: left;
-      border: 1px dashed #FFF;
+      border: 1px dashed #fff;
       transition: all 0.5s ease-in-out;
       border-radius: 0 0.5rem 0.5rem 0;
       overflow: hidden;
 
       &:after {
-        content: '';
+        content: "";
         display: inline-block;
         position: absolute;
         width: 100%;
@@ -109,18 +109,19 @@ h1 {
         user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 
         -webkit-text-fill-color: white;
-        -webkit-text-stroke: 1px #14555a;
+        -webkit-text-stroke: 1px var(--color-dnb-green);
 
         z-index: 1;
       }
     }
 
     &.open {
-      box-shadow: 0 0 1.5rem .25rem #F2F4EC;
+      box-shadow: 0 0 1.5rem 0.25rem #f2f4ec;
 
       .door {
         /* Perspective creates the door open effect */
-        transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-105deg);
+        transform: perspective(1200px) translateZ(0px) translateX(0px)
+          translateY(0px) rotateY(-105deg);
       }
     }
   }
@@ -132,15 +133,37 @@ h1 {
 }
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
