--- a/src/components/fancyDay/FancyDay.module.scss
+++ b/src/components/fancyDay/FancyDay.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   .topBar {
-    background-color: var(--color-red);
+    background-color: var(--color-dnb-green);
     .day {
       font-size: 2rem;
       color: white;
