Added more states YEY! 🌈

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   --color-red-dark: #bb2528;
   --color-red: #ea4630;
   --color-dark: #333333;
+  --color-dark-dark: #222222;
+  --color-semi-dark-dark: #313131;
   --color-dnb-green: #14555a;
 }
 
