--- a/src/components/doors/doors.module.scss
+++ b/src/components/doors/doors.module.scss
@@ -7,7 +7,7 @@ h1 {
   justify-content: center;
   flex-wrap: wrap;
   gap: 2rem;
-  margin-bottom: 16rem;
+  margin-bottom: 18rem;
 
   .backDoor {
     background-color: #f2f4ec;
@@ -20,52 +20,138 @@ h1 {
     border-radius: 0 0.5rem 0.5rem 0;
     cursor: pointer;
 
-    &:nth-child(2n) .door::after {
-      transform: rotate(0deg);
+    .elf {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      
+      .elfImg {
+        height: 11rem;
+      }
     }
 
-    &:nth-child(3n) .door::after {
-      transform: rotate(30deg);
+
+    &:nth-child(2n) {
+      &.completed .elfImg {
+        transform: rotate(0deg);
+      }
+
+      .door::after {
+        transform: rotate(0deg);
+      }
     }
 
-    &:nth-child(5n) .door::after {
-      transform: rotate(60deg);
+    &:nth-child(3n) {
+      &.completed .elfImg {
+        transform: rotate(30deg);
+      }
+
+      .door::after {
+        transform: rotate(30deg);
+      }
     }
 
-    &:nth-child(11n) .door::after {
-      transform: rotate(90deg);
+    &:nth-child(5n) {
+      &.completed .elfImg {
+        transform: rotate(60deg);
+      }
+
+      .door::after {
+        transform: rotate(60deg);
+      }
     }
 
-    &:nth-child(13n) .door::after {
-      transform: rotate(120deg);
+    &:nth-child(11n) {
+      &.completed .elfImg {
+        transform: rotate(90deg);
+      }
+
+      .door::after {
+        transform: rotate(90deg);
+      }
     }
 
-    &:nth-child(17n) .door::after {
-      transform: rotate(150deg);
+    &:nth-child(13n) {
+      &.completed .elfImg {
+        transform: rotate(120deg);
+      }
+
+      .door::after {
+        transform: rotate(120deg);
+      }
     }
 
-    &:nth-child(2n + 1) .door::after {
-      transform: rotate(180deg);
+    &:nth-child(17n) {
+      &.completed .elfImg {
+        transform: rotate(150deg);
+      }
+
+      .door::after {
+        transform: rotate(150deg);
+      }
     }
 
-    &:nth-child(3n + 2) .door::after {
-      transform: rotate(210deg);
+    &:nth-child(2n + 1) {
+      &.completed .elfImg {
+        transform: rotate(180deg);
+      }
+
+      .door::after {
+        transform: rotate(180deg);
+      }
     }
 
-    &:nth-child(5n + 3) .door::after {
-      transform: rotate(240deg);
+    &:nth-child(3n + 2) {
+      &.completed .elfImg {
+        transform: rotate(210deg);
+      }
+
+      .door::after {
+        transform: rotate(210deg);
+      }
     }
 
-    &:nth-child(11n + 5) .door::after {
-      transform: rotate(270deg);
+    &:nth-child(5n + 3) {
+      &.completed .elfImg {
+        transform: rotate(240deg);
+      }
+
+      .door::after {
+        transform: rotate(240deg);
+      }
     }
 
-    &:nth-child(13n + 11) .door::after {
-      transform: rotate(300deg);
+    &:nth-child(11n + 5) {
+      &.completed .elfImg {
+        transform: rotate(270deg);
+      }
+
+      .door::after {
+        transform: rotate(270deg);
+      }
     }
 
-    &:nth-child(17n + 13) .door::after {
-      transform: rotate(330deg);
+    &:nth-child(13n + 11) {
+      &.completed .elfImg {
+        transform: rotate(300deg);
+      }
+
+      .door::after {
+        transform: rotate(300deg);
+      }
+    }
+
+    &:nth-child(17n + 13) {
+      &.completed .elfImg {
+        transform: rotate(330deg);
+      }
+
+      .door::after {
+        transform: rotate(330deg);
+      }
     }
 
     .door {
@@ -90,7 +176,6 @@ h1 {
         position: absolute;
         width: 100%;
         height: 100%;
-
         background-image: url("/src/assets/stars.svg");
         background-repeat: repeat;
       }
