--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,15 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
+  width: 100%;
   text-align: center;
+}
+
+@media screen and (min-width: 40rem) {
+  #root {
+    padding: 2rem;
+  }
 }
 
 .logo {
@@ -41,9 +48,15 @@ body {
   background-repeat: no-repeat;
 }
 
-/*
-  Theme: myTheme1
-*/
+.simple-keyboard {
+  display: flex;
+  justify-content: center;
+}
+
+.hg-rows {
+  width: 100%;
+}
+
 .simple-keyboard.dark {
   background: var(--color-dark);
   border-radius: 0;
@@ -63,4 +76,10 @@ body {
 .simple-keyboard.dark .hg-button:active {
   background: black;
   color: white;
+}
+
+@media screen and (min-width: 40rem) {
+  .simple-keyboard {
+    display: none;
+  }
 }
