--- a/src/components/letterCard/LetterCard.module.scss
+++ b/src/components/letterCard/LetterCard.module.scss
@@ -4,10 +4,18 @@
   color: white;
   padding: 1rem;
   border-radius: 0.5rem;
-  height: 1rem;
-  width: 1rem;
-  font-size: 2rem;
-  line-height: 2rem;
+  height: 0.5rem;
+  width: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+
+  @media screen and (min-width: 40rem) {
+    height: 1rem;
+    width: 1rem;
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+
   font-weight: 500;
   display: flex;
   justify-content: center;
