--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --color-dark-dark: #222222;
   --color-semi-dark-dark: #313131;
   --color-dnb-green: #14555a;
+  --color-dark-not-really: #999999;
 }
 
 #root {
