--- a/src/components/doors/doors.module.scss
+++ b/src/components/doors/doors.module.scss
@@ -19,6 +19,9 @@ h1 {
     border: 1px solid #fff;
     border-radius: 0 0.5rem 0.5rem 0;
     cursor: pointer;
+    &.failed {
+      background-color: var(--color-semi-dark-dark);
+    }
 
     .elf {
       display: flex;
@@ -27,15 +30,17 @@ h1 {
       height: 100%;
       width: 100%;
       overflow: hidden;
-      
+
       .elfImg {
         height: 11rem;
       }
+      .failImg {
+        height: 6rem;
+      }
     }
 
-
     &:nth-child(2n) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(0deg);
       }
 
@@ -45,7 +50,7 @@ h1 {
     }
 
     &:nth-child(3n) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(30deg);
       }
 
@@ -55,7 +60,7 @@ h1 {
     }
 
     &:nth-child(5n) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(60deg);
       }
 
@@ -65,7 +70,7 @@ h1 {
     }
 
     &:nth-child(11n) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(90deg);
       }
 
@@ -75,7 +80,7 @@ h1 {
     }
 
     &:nth-child(13n) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(120deg);
       }
 
@@ -85,7 +90,7 @@ h1 {
     }
 
     &:nth-child(17n) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(150deg);
       }
 
@@ -95,7 +100,7 @@ h1 {
     }
 
     &:nth-child(2n + 1) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(180deg);
       }
 
@@ -105,7 +110,7 @@ h1 {
     }
 
     &:nth-child(3n + 2) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(210deg);
       }
 
@@ -115,7 +120,7 @@ h1 {
     }
 
     &:nth-child(5n + 3) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(240deg);
       }
 
@@ -125,7 +130,7 @@ h1 {
     }
 
     &:nth-child(11n + 5) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(270deg);
       }
 
@@ -135,7 +140,7 @@ h1 {
     }
 
     &:nth-child(13n + 11) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(300deg);
       }
 
@@ -145,7 +150,7 @@ h1 {
     }
 
     &:nth-child(17n + 13) {
-      &.completed .elfImg {
+      &.successful .elfImg {
         transform: rotate(330deg);
       }
 
@@ -201,7 +206,10 @@ h1 {
     }
 
     &.open {
-      box-shadow: 0 0 1.5rem 0.25rem #f2f4ec;
+      box-shadow: 0 0 1.5rem 0.125rem #f2f4ec;
+      &.failed {
+        box-shadow: 0 0 1.5rem 0.125rem var(--color-red);
+      }
 
       .door {
         /* Perspective creates the door open effect */
