--- a/src/components/doors/doors.module.scss
+++ b/src/components/doors/doors.module.scss
@@ -22,6 +22,9 @@ h1 {
     &.failed {
       background-color: var(--color-semi-dark-dark);
     }
+    &:focus {
+      box-shadow: 0 0 1.5rem 0.125rem #f2f4ec;
+    }
 
     .elf {
       display: flex;
