Style help button

--- a/src/routes/Wordle.module.scss
+++ b/src/routes/Wordle.module.scss
@@ -1,5 +1,7 @@
 .helpButton {
   position: absolute;
+  background-color: var(--color-dark-dark);
+  color: white;
   margin-left: -1.562rem;
   top: 1rem;
   border: 0.125rem solid transparent;
