--- a/src/components/letterCard/LetterCard.module.scss
+++ b/src/components/letterCard/LetterCard.module.scss
@@ -1,5 +1,5 @@
 .cardWrapper {
-  border: 0.25rem solid var(--color-dark-dark);
+  border: 0.25rem solid var(--color-dark);
   background-color: var(--color-semi-dark-dark);
   color: white;
   padding: 1rem;
