--- a/src/routes/Wordle.module.scss
+++ b/src/routes/Wordle.module.scss
@@ -1,6 +1,6 @@
 .helpButton {
   position: absolute;
-  background-color: var(--color-dark-dark);
+  background-color: var(--color-dark);
   color: white;
   margin-left: -1.562rem;
   top: 1rem;
