--- a/src/components/fancyDay/FancyDay.module.scss
+++ b/src/components/fancyDay/FancyDay.module.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   background-color: white;
   max-width: 16rem;
-  color: var(--color-dark);
+  color: var(--color-x-mas-blue-sky);
   display: flex;
   flex-direction: column;
   .topBar {
