--- a/src/components/doors/doors.module.scss
+++ b/src/components/doors/doors.module.scss
@@ -173,7 +173,7 @@ h1 {
       height: 8rem;
       background-color: var(--color-dnb-green);
       transform-origin: left;
-      border: 1px dashed #fff;
+      border: 1px dashed var(--color-dark-not-really);
       transition: all 0.5s ease-in-out;
       border-radius: 0 0.5rem 0.5rem 0;
       overflow: hidden;
