Add some better styling

--- a/src/components/cogmenu/CogMenu.module.scss
+++ b/src/components/cogmenu/CogMenu.module.scss
@@ -6,8 +6,14 @@
   .cogIcon {
     font-size: 2rem;
   }
+  & > button {
+    background-color: transparent;
+    margin-bottom: 0.5rem;
+  }
   .children {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    gap: 0.5rem;
   }
 }
