Make light flicker

--- a/src/components/flashlightScene/Flashlight.module.scss
+++ b/src/components/flashlightScene/Flashlight.module.scss
@@ -7,5 +7,12 @@
 
   mix-blend-mode: screen;
 
-  filter: brightness(1.35);
+  filter: brightness(0.85) sepia(1) contrast(2);
+  animation: flicker 1.5s linear infinite alternate;
+}
+
+@keyframes flicker {
+  80% {
+    filter: brightness(0.65) sepia(1) contrast(1.5);
+  }
 }
