--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.christmasFont {
+  font-family: 'Ephesis', serif;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
