--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,9 @@
 body {
   background-color: var(--color-x-mas-blue-sky);
   background-image: url("/src/assets/landscapeWithScoreTree.svg");
-  background-position: left -20rem bottom -10rem;
+  background-position: left -24rem bottom -10rem;
   background-repeat: no-repeat;
+  background-size: 200rem;
 }
 
 .simple-keyboard {
