--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,8 @@
   width: 100%;
   text-align: center;
   color: white;
+  height: 100%;
+  position: relative;
 }
 
 @media screen and (min-width: 40rem) {
