Fix stuff. Seems to work! lol! 🎩

--- a/src/components/cogmenu/CogMenu.module.scss
+++ b/src/components/cogmenu/CogMenu.module.scss
@@ -1,8 +1,8 @@
 .cog {
   position: absolute;
+  right: 0;
+  top: 0;
   padding: 0.5rem;
-  top: 1rem;
-  right: 1rem;
   & > button {
     background-color: transparent;
     margin-bottom: 0.5rem;
