--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,9 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 1rem;
   width: 100%;
   text-align: center;
   color: white;
-}
-
-@media screen and (min-width: 40rem) {
-  #root {
-    padding: 2rem;
-  }
 }
 
 .logo {
@@ -89,4 +82,13 @@ body {
 
 button:hover {
   box-shadow: 0px 0px 0px 0.125rem var(--color-green)
+}
+
+header {
+  position: relative;
+  width: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
