Fix safari flashlight issue

--- a/src/components/flashlightScene/Flashlight.module.scss
+++ b/src/components/flashlightScene/Flashlight.module.scss
@@ -4,8 +4,6 @@
   background-image: url("./texture_flashlight.png");
   background-size: contain;
 
-  mix-blend-mode: screen;
-
   filter: brightness(0.85) sepia(1) contrast(1.5);
   animation: flicker 1.5s linear infinite alternate;
   transform: translate(-50%, -50%);
@@ -17,6 +15,7 @@
     transform: translate(-50%, -50%) scale(0.95);
   }
 }
-:global(*), :global(button) {
-  cursor: url("./lantern.png") 32 32, auto !important;
+:global(*),
+:global(button) {
+  cursor: url("./lantern.png") 32 32, auto;
 }
