--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ html {
   margin: 0 auto;
   text-align: center;
   color: white;
+  position: relative;
 }
 
 .logo {
@@ -87,7 +88,7 @@ body {
 }
 
 button:hover {
-  box-shadow: 0px 0px 0px 0.125rem var(--color-green)
+  box-shadow: 0px 0px 0px 0.125rem var(--color-green);
 }
 
 header {
