--- a/src/components/cogmenu/CogMenu.module.scss
+++ b/src/components/cogmenu/CogMenu.module.scss
@@ -3,6 +3,7 @@
   right: 0;
   top: 0;
   padding: 0.5rem;
+  z-index: 10;
   & > button {
     background-color: transparent;
     margin-bottom: 0.5rem;
