--- a/src/components/north-star/NorthStar.module.scss
+++ b/src/components/north-star/NorthStar.module.scss
@@ -1,8 +1,7 @@
 .star {
-  animation: wiggle infinite 3s;
-  margin-right: 10rem; //
+  animation: wiggle infinite 3s ease-out;
   position: absolute;
-  right: 0;
+  right: 25vh;
 }
 @keyframes wiggle {
   0% {
@@ -16,9 +15,6 @@
   }
   75% {
     transform: rotate(-3deg);
-  }
-  100% {
-    transform: rotate(0deg);
   }
 }
 
