--- a/src/components/north-star/NorthStar.module.scss
+++ b/src/components/north-star/NorthStar.module.scss
@@ -1,7 +1,10 @@
 .star {
   animation: wiggle infinite 3s ease-out;
   position: absolute;
-  right: 25vh;
+  top: 5vh;
+  right: 5vw;
+  height: 12rem;
+  width: 12rem;
 }
 @keyframes wiggle {
   0% {
@@ -15,15 +18,6 @@
   }
   75% {
     transform: rotate(-3deg);
-  }
-}
-
-//wrap on top heading
-@media only screen and (max-width: 80.625rem) {
-  .star {
-    right: auto;
-    margin: auto;
-    position: relative;
   }
 }
 
